cmd/original-dst/service-envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 4999
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_service
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: cluster1
                http_filters:
                  - name: envoy.router
                    typed_config: {}
                codec_type: auto
      listener_filters:
        - name: envoy.listener.original_dst
          typed_config: {}
  clusters:
    - name: cluster1
      type: ORIGINAL_DST
      connect_timeout: 6s
      lb_policy: ORIGINAL_DST_LB
      dns_lookup_family: V4_ONLY
cluster_manager: {}
watchdog: {}
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 19000
